--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Home - DevOps Blog{% endblock %}
 {% block content %}
-<h1>All Posts</h1>
+<h1>Latest Posts</h1>
 {% for post in posts %}
     <article>
         <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
