--- a/templates/blog/dashboard.html
+++ b/templates/blog/dashboard.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}My Posts - DevOps Blog{% endblock %}
 {% block content %}
-<h1>My Posts</h1>
+<h1>Dashboard - My Posts</h1>
 {% for post in posts %}
     <article>
         <h2>{{ post.title }}</h2>
